force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Operations__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>PR1064302-452</description>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>