force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Operations__c/fields/Crew_2nd__c.field-meta.xml
<CustomField>
    <fullName>Crew_2nd__c</fullName>
    <description>PR1064302-452</description>
    <label>Crew 2nd</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>