force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Operations__c/fields/Crew_3rd__c.field-meta.xml
<CustomField>
    <fullName>Crew_3rd__c</fullName>
    <description>PR1064302-452</description>
    <label>Crew 3rd</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>