force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Operations__c/fields/Operation_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Operation_Identifier__c</fullName>
    <description>PR1064302-452</description>
    <label>Operation Identifier</label>
    <length>200</length>
    <type>Text</type>
</CustomField>