force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Operations__c/recordTypes/APS.recordType-meta.xml
<RecordType>
    <fullName>APS</fullName>
    <active>true</active>
    <label>APS</label>
</RecordType>